# pikuma_physics

./: .gitignore  CMakeLists.txt  main.cpp
assets/shaders/: gradient.frag
modules/: vectors.ixx
src/: body.cpp  body.h  collisions.cpp  collisions.h  forces.cpp  forces.h  main.c  main.cpp  particles.cpp  particles.h  physic_constants.h  raylib_extension.cpp  shape.cpp  shape.h  vectors.cpp  vectors.h
src/graphics/: debug_ui.cpp  debug_ui.h  draw.cpp  draw.h  raylib_extension.cpp  raylib_extension.h  raylib_utils.c  raylib_utils.h
src/physics/: body.cpp  body.h  collision.c  collision.h  collisions.cpp  collisions.h  forces.c  forces.cpp  forces.h  main.cpp  particles.c  particles.h  rigidbodies.c  rigidbodies.h  shape.c  shape.cpp  shape.h
src/scenes/: particles_scene.c  particles_scene.h  rigidbodies_scene.c  rigidbodies_scene.h  scene.h
src/utils/: random.h
